# brust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
bam/: Cargo.toml  README.md  aligned.bam  unaligned.bam
bam/src/: lib.rs
bam/tests/: conversions.rs
brust/: Cargo.toml  README.md
brust-core/: Cargo.toml  README.md
brust-core/src/: lib.rs
brust-core/tests/: compression.rs
brust/bam/: Cargo.toml  PLAN.md
brust/bam/src/: lib.rs
brust/bam/tests/: conversions.rs  test_api.rs
brust/brust/: Cargo.toml
brust/brust-core/: Cargo.toml
brust/brust/src/: lib.rs
brust/fasta/: Cargo.toml  ace2_fragments.fasta
brust/fasta/src/: lib.rs
brust/fasta/tests/: parser_edges.rs
brust/fastq/: Cargo.toml  UDP0057_sub100.fastq
brust/fastq/src/: lib.rs
brust/fastq/tests/: parser_edges.rs
brust/pod5/: Cargo.toml
brust/pod5/src/: lib.rs
brust/pod5/tests/: ergonomics.rs
brust/sam/: Cargo.toml  aligned.sam
brust/sam/src/: lib.rs
brust/src/: convert.rs  lib.rs  main.rs  stats.rs  validate.rs
brust/tests/: cli.rs  convert.rs  facade.rs  stats_validate.rs
brust/tests/common/: mod.rs
fasta/: Cargo.toml  README.md
fasta/tests/: parser_edges.rs
fastq/: Cargo.toml  README.md
fastq/src/: lib.rs
fastq/tests/: compression.rs  parser_edges.rs
pod5/: A_100.pod5  Cargo.toml  README.md
pod5/tests/: ergonomics.rs
sam/: Cargo.toml  README.md  unaligned.sam
sam/src/: lib.rs
sam/tests/: parser_edges.rs
