[package]
name = "brust-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Shared error and result types for Brust bioinformatics format crates."
keywords.workspace = true
categories.workspace = true

[dependencies]
