[package]
name = "brust"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Public facade for Brust bioinformatics format readers, writers, and conversion helpers."
keywords.workspace = true
categories.workspace = true

[dependencies]
brust-core = { path = "../brust-core" }
fasta = { path = "../fasta" }
sam = { path = "../sam" }
bam = { path = "../bam" }
fastq = { path = "../fastq" }
pod5 = { path = "../pod5" }
