[package]
name = "brust-pod5"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "POD5 reader, writer, signal extraction, and metadata summaries for Brust."
keywords.workspace = true
categories.workspace = true

[dependencies]
arrow-array = "58.3.0"
arrow-ipc = "58.3.0"
arrow-schema = "58.3.0"
brust-core = { path = "../brust-core", version = "0.1.1" }
flatbuffers = "25.12.19"
zstd = { version = "0.13", default-features = false }
