[package]
name = "bam"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "BAM and BGZF reader, writer, and SAM conversion helpers for Brust."
keywords.workspace = true
categories.workspace = true

[dependencies]
brust-core = { path = "../brust-core" }
flate2 = "1.1.9"
sam = { path = "../sam" }
