[package]
name = "fastq"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
description = "FASTQ reader, writer, and FASTA conversion helpers for Brust."
keywords.workspace = true
categories.workspace = true

[dependencies]
brust-core = { path = "../brust-core" }
fasta = { path = "../fasta" }
